app/stylesheets/main.scss
/* ... */
#thirdPage header {
  @include breakpoint(medium down) {
    padding-top: 3em;
  }
}

.menu-shadow {
  text-shadow: 0px 0px 2px rgba(12, 77, 120, 0.7);
}

#fixed-menu {
  position: fixed;
  top: 0px;
  left: 0px;
  padding: 20px;
  height: auto;
  z-index: 3;
  @include breakpoint(medium down) {
    width: 100%;
  }
}

#fixed-menu ul {
  @include breakpoint(medium down) {
    left: 0;
    top: 0;
    z-index: -1;
    width: 100%;
    padding-top: 2.1em;
    padding-bottom: 0.8em;
    position: absolute;
    margin-left: 0 !important;
    padding-left: 20px;
    padding-right: 20px;
    background-color: rgba(0, 0, 0, 0.8);
  }
}

#fixed-menu .menu {
  margin-top: 0.2em;
  clear: both;
  float: left;
  margin-left: 1.7em;
}

#fixed-menu .menu li {
  text-transform: uppercase;
  font-weight: bold;
  margin-bottom: 3px;
  @extend .menu-shadow;
}

#fixed-menu .menu li.menu_divider {
  border-bottom: none;
  height: 1em;
  @include breakpoint(medium down) {
    height: 1.5em;
  }
}

#fixed-menu .menu li.menu_divider::after {
  background: none;
}

#fixed-menu .menu li a {
  color: #fff;
  padding: 0.3rem 0;
  padding-bottom: 0;
  margin-bottom: 0;
  @include breakpoint(medium down) {
    font-size: 1.4em;
  }
}

#fixed-menu .menu li:last-child::after {
  background: none;
}

#fixed-menu .menu li::after{
  content: "";
  position: absolute;
  height: 1px;
  width: 100%;
  background: #444;
  background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
  @include breakpoint(medium down) {
    height: 2px;
  }
 }

.asterisk {
  font-size: 3.2rem;
  font-weight: bold;
  line-height: 0.5em;
  width: 2.5em;
  @include breakpoint(medium down) {
    display: block;
    width: 100%;
  }
  height: 0.5em;
  overflow: hidden;
}

#asterisk-image {
  height: 0.4em;
  width: 0.4em;
}

#menu-logo {
  display: none;
  height: 0.5em;
  width: 2em;
  margin-left: 0.1em;
  //margin-top: -0.4em;
  @extend .menu-shadow;
}


.asterisk:hover {
  cursor: pointer;
}

ul.job_list_items {
  text-align: right;
  margin-top: 5em;
}

ul.job_list_items li {
  width: 21em;
  height: 3em;
  background: #3B4E6E;
  /*margin-bottom: 1px;*/
  margin-bottom: 0.1em;
  text-align: left;
  margin-right: 0 !important;
}


ul.job_list_items li a {
  // height: 50px;
  height: 100%;
  color: #fff;
  line-height: 1.3 !important;
  font-weight: 400;
  font-size: 1.5em;
  padding: 0.7rem 1rem !important;/* !important because this gets overwritten by .menu.simple a*/
}

.menu.simple li {
  margin-right: 0;
}

#firstPage .columns{
  white-space: normal;
}

#firstPage .job_openings {
  padding-right: 0;
}

.profile {
  padding-right: 0;
  opacity: 0;
  position: relative;
  max-height: 100vh;
  z-index: 10;
  max-width: 100vw;
}
.panel-container .close-button {
  position: absolute;
  left: -3rem;
  background: #757C87;
  width: 3rem;
  height: 2.75rem;
  text-align: center;
  line-height: 2.75rem;
  font-weight: bold;
  color: #fff;
  font-size: 2.75rem;
  top: 0;
}

.panel-container .close-button-mobile {
  position: absolute;
  right: 0;
  background: #757C87;
  width: 2rem;
  height: 1.75rem;
  text-align: center;
  line-height: 1.75rem;
  font-weight: bold;
  color: #fff;
  font-size: 2rem;
  top: 0;
  display: block;
}

@media #{$medium-only} {
  .profile {
    margin-left: 3rem;
  }
}

// Slider
.slide-in {
	visibility: hidden;
	transition:visibility 0s linear 0.2s,opacity 0.2s linear;
  padding-left: 0;
}

.slide-in.is-visible {
	visibility: visible;
  opacity: 1;
	transition: visibility 0s 0s;
  transition: opacity 0.3s ease-in;
}

.slide-in-header {
	position: absolute;
	top: -50px;
	width: 90%;
	height: 50px;
	transition: top 0.3s 0s;
}

.hide-on-mobile.is-visible {
  margin-left: 0;
}

.hide-on-mobile {
  @include breakpoint(medium down) {
    display: none;
  }

}
.content {
  @include breakpoint(medium down) {
    height: 100%;
  }
}


.is-visible .slide-in-header {
	top: 0;
	transition: top 0.3s 0.3s;
}
.arrow-left {
	width: 0;
	height: 0;
	border-top: 20px solid transparent;
	border-bottom: 20px solid transparent;
  border-right:20px solid #fff;
  position: absolute;
  left: -15px;
}

.panel-container {
  background: #fff;
  color: #3B4E6E;
  height: 100vh;
	transition-property: transform;
	transition-duration: 0.3s;
	transition-delay: 0.3s;
 	transform: translate3d(100%, 0, 0);
}

.is-visible .panel-container {
	transform: translate3d(0, 0, 0);
	transition-delay: 0s;
}
.panel-content {
  padding: 20px;
  height: 100vh;
  overflow-y: scroll;
}

.codestar-button {
  border: 1px solid white;
  background-color: transparent;
  text-transform: uppercase;
  font-weight: bold;
  padding-bottom: 0.6em;
}

.codestar-button:hover {
  background-color: rgba(255, 255, 255, 0.5);
}

.codestar-button:active {
  background-color: rgba(255, 255, 255, 0.7);
}

.codestar-button:focus {
  background-color: rgba(255, 255, 255, 0.3);
}

.codestar-button:visited {
  background-color: transparent;
}

.why {
  white-space: normal;
}

ul.why li:before,
ul.key_skills li:before {
  content: '+';
  font-size: 1.5em;
  font-weight: bold;
  padding-right: 0.5em;
  margin-left: -1em;
}

ul.key_skills li:before {
  margin-left: 0;
  padding-right: 0.2em;
}

ul.why li,
ul.key_skills li {
  list-style: none;
  line-height: normal;
  margin-bottom: 1.1em;
}

.team-link, .case-link {
  stroke-width: 1px;
  stroke: white;
}

.team-node, .case-node {
  cursor: pointer;
}

#teamTagline {
  font-style: italic;
}

#map {
  width: 100%;
  height: 100%;
  filter: grayscale(100%);
  pointer-events: none;
}

.contact_form_container {
  padding-right: 0;
}

#contact_form {
  margin-left: 10px;
}

.map_container {
  padding-left: 0;
  position: relative;
  height: 100%;
}

#contact_form .row .columns {
  padding-right: 2px;
  padding-left: 0;
}

#map {
  position: absolute;
}

.contact_data_table {
  width: 100%;
  background: rgb(0, 32, 65);
  opacity: 0.8;
  position: absolute;
  z-index: 5;
  bottom: 0;
  margin-bottom: 0;
}
/* ... */

